--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
         <td>Jacobs University, Germany</td>
       </tr>
       <tr>
-        <td>Ann Burgess</td>
+        <td>Ann Bryant Burgess</td>
         <td>Program Committee</td>
-        <td>University of Southern California</td>
+        <td>Foundation for Earth Science</td>
       </tr>
       <tr>
         <td>Pascal Hitzler</td>
@@ -115,9 +115,9 @@
         <td>Wright State University</td>
       </tr>
       <tr>
-        <td>Chris Mattmann</td>
+        <td><a href="chris.a.mattmann@jpl.nasa.gov">Chris Mattmann</a></td>
         <td>Program Committee</td>
-        <td>NASA Jet Propulsion Laboratory</td>
+        <td>NASA Jet Propulsion Laboratory & University of Southern California</td>
       </tr>
       <tr>
         <td>Lewis McGibbney</td>
