Add Twitter feed and update lewismc contact details

--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
 	  <title>Big Data in the Geosciences Workshop</title>
 	  <link rel="stylesheet" 
 	     href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-	</head>
+	<style>
+          .table{
+            display:table;
+            height: 50%;
+            width: 100%;
+          }
+          .table-cell{
+            display:table-cell;
+            vertical-align: middle;
+          }
+        </style>
+        </head>
 	<body>
 
     <div class="container">
@@ -15,16 +26,22 @@
           2015 IEEE International Big Data Conference</a>
        </p>
      </div>
-
-     <div class="page-header">
+       <div class="page-header">
        <h1>Workshop description</h1>
-       <medium>
+       <div class="table">
+        <div class="table-cell">
+         <medium>
          <p>Computing is fundamentally transforming science. We have entered the so- called Fourth Paradigm in which observational data is threatening to overwhelm scientists. There are now numerous examples of the five "V's" of Big Data (Volume, Velocity, Variety, Veracity, and Value) impacting the geosciences. The rapid improvements in scientific instruments have led to a massive growth in data production. As data volumes often prohibit transfer of such Big Data, it is becoming increasingly important to develop sustainable infrastructure, clever data management and reduction analytics, and community, around Geoscience Big Data. The increasing emphasis on sharing and collaborating has led to a growing focus on discovery and variety.</p>
-         <p>In addition, scientific data, and the processes used to analyze that data, can differ substantially from those encountered with Big Data in other fields. Moreover, educating the next generation of geoscientists is itself becoming a pressing issue.</p>
-         <p>We focus on highlighting the state-of-the-art research surrounding Big Data in the geosciences. We seek to engage the scientific community in understanding their big data challenges and problems. Finally, we aim to identify gaps in current technologies as well as gaps in the education of new data scientists. This workshop will provide a venue for participants to showcase innovative tools and services, build new collaborations, and hear from application scientists and educators about the challenges they face.</p>
-       </medium>
+         <p class="text-left">In addition, scientific data, and the processes used to analyze that data, can differ substantially from those encountered with Big Data in other fields. Moreover, educating the next generation of geoscientists is itself becoming a pressing issue.</p>
+         <p class="text-left">We focus on highlighting the state-of-the-art research surrounding Big Data in the geosciences. We seek to engage the scientific community in understanding their big data challenges and problems. Finally, we aim to identify gaps in current technologies as well as gaps in the education of new data scientists. This workshop will provide a venue for participants to showcase innovative tools and services, build new collaborations, and hear from application scientists and educators about the challenges they face.</p>
+        </medium>
+       </div>
+       <div class="table-cell">
+       <a class="twitter-timeline"  href="https://twitter.com/hashtag/geobigdata15" data-widget-id="596732944749703168">#geobigdata15 Tweets</a>
+       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>   
+        </div>
+        </div>   
      </div>
-
      <br/>
      <div>
       <h1>Topics of Interest</h1>
@@ -120,9 +137,9 @@
         <td>NASA Jet Propulsion Laboratory & University of Southern California</td>
       </tr>
       <tr>
-        <td>Lewis McGibbney</td>
+        <td><a href="https://www.linkedin.com/in/lmcgibbney">Lewis John McGibbney</a></td>
         <td>Program Committee</td>
-        <td>NASA Jet Propulsion Laboratory</td>
+        <td><a href="http://www.jpl.nasa.gov">NASA Jet Propulsion Laboratory</a></td>
       </tr>
       <tr>
         <td>Kim Whitehall</td>
