fix affiliations for JPL'ers and link to Mattmann's site rather than broken email.

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
         <td>Wright State University</td>
       </tr>
       <tr>
-        <td><a href="chris.a.mattmann@jpl.nasa.gov">Chris Mattmann</a></td>
+        <td><a href="http://sunset.usc.edu/~mattmann/">Chris Mattmann</a></td>
         <td>Program Committee</td>
-        <td>NASA Jet Propulsion Laboratory & University of Southern California</td>
+        <td><a href="http://www.jpl.nasa.gov">NASA Jet Propulsion Laboratory</a> & <a href="http://cs.usc.edu">University of Southern California</a></td>
       </tr>
       <tr>
         <td><a href="https://www.linkedin.com/in/lmcgibbney">Lewis John McGibbney</a></td>
@@ -144,7 +144,7 @@
       <tr>
         <td>Kim Whitehall</td>
         <td>Program Committee</td>
-        <td>NASA Jet Propulsion Laboratory</td>
+        <td><a href="http://www.jpl.nasa.gov">NASA Jet Propulsion Laboratory</a></td>
       </tr>
      </tbody>
      </table>
