Added Yolanda Gil to Program Committee

--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
         <td>Foundation for Earth Science</td>
       </tr>
       <tr>
+        <td><a href="http://www.isi.edu/~gil">Yolanda Gil</a></td>
+        <td>Program Committee</td>
+        <td>Information Sciences Institute, University of Southern California</td>
+      </tr>
+      <tr>
         <td>Pascal Hitzler</td>
         <td>Program Committee</td>
         <td>Wright State Univerity</td>
