Added Marlon and Marru to Program Committee

--- a/index.html
+++ b/index.html
@@ -147,6 +147,16 @@
         <td><a href="http://www.jpl.nasa.gov">NASA Jet Propulsion Laboratory</a></td>
       </tr>
       <tr>
+        <td>Marlon Pierce</td>
+        <td>Program Committee</td>
+        <td>Indiana University</td>
+      </tr>
+      <tr>
+        <td>Marru Suresh</td>
+        <td>Program Committee</td>
+        <td>Indiana University</td>
+      </tr>
+      <tr>
         <td>Kim Whitehall</td>
         <td>Program Committee</td>
         <td><a href="http://www.jpl.nasa.gov">NASA Jet Propulsion Laboratory</a></td>
