Added date of workshop

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      
      <div class="jumbotron">
        <h1>Big Data in the Geosciences</h1>
-       <p>A workshop to be held at the <a href="http://cci.drexel.edu/bigdata/bigdata2015/">
+       <p>A workshop to be held Thursday October 29th at the <a href="http://cci.drexel.edu/bigdata/bigdata2015/">
           2015 IEEE International Big Data Conference</a>
        </p>
      </div>
