Extended submission deadline

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
      </thead>
      <tbody>
       <tr>
-        <td>Aug 30, 2015</td>
+        <td><strike>Aug 30, 2015</strike>Extended to Sept. 1 at midnight Eastern time</td>
         <td>Due date for full workshop paper submissions</td>
       </tr>
       <tr>
