--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
        </p>
      </div>
        <div class="page-header">
+       <h1>Workshop Schedule</h1>
+       <p>The <a href="schedule.html">workshop schedule</a> is now available</p>
        <h1>Workshop description</h1>
        <div class="table">
         <div class="table-cell">
