--- a/schedule.html
+++ b/schedule.html
@@ -1,4 +1,4 @@
-<html>
+
 
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+
+<h1>Workshop will be held Thursday October 29 at the IEEE International Big Data Conference</h1>
 
 <table class="table table-striped">
  <tr class="bold">
