Edits to schedule

--- a/schedule.html
+++ b/schedule.html
@@ -10,12 +10,13 @@
 	overflow: hidden;
 	width: 100px;
     }
+    h1 { text-align: center; }
   </style>
 </head>
 
 <body>
 
-<h1>Workshop will be held Thursday October 29 at the IEEE International Big Data Conference</h1>
+<h1>Workshop will be held Thursday October 29</h1>
 
 <table class="table table-striped">
  <tr class="bold">
