Updated schedule with panel and demos

--- a/schedule.html
+++ b/schedule.html
@@ -178,19 +178,23 @@
   <td>4:10 - 4:30pm</td>
  </tr>
  <tr class="bold">
-  <td>Panel Discussion - Big Data Needs and Future Drivers</td>
-  <td></td>
-  <td>4:30 - 5:30pm</td>
+  <td>Demo Session</td>
+  <td>Lei Huang and Seungwon Lee</td>
+  <td>4:30 - 5:00pm</td>
  </tr>
  <tr class="bold">
-  <td>Group Discussion, Demos, and Wrap Up</td>
-  <td></td>
-  <td>5:30 - 6:30pm</td>
- </tr>
- <tr>
-  <td></td>
-  <td></td>
-  <td></td>
+  <td>Panel, Group Discussion, and Wrap Up</td>
+  <td style="text-align:left">Constantine Lukashin (NASA/Langley)<br/> 
+- The 2017 Decadal Survey and pontential impacts<br/>
+      <br/>Chris Lynnes (NASA/Goddard)<br/>
+ - a NASA perspective on Big Data<br/>
+      <br/>Lesley Wyborn<br/>
+ - perspectives from a major Australian national data center<br/>
+      <br/>Annie Burgess (ESIP)<br/>
+ - professional society perspectives on Big Data challenges</br>
+      <br/>Peter Baumann (OGC)<br/>
+ - perspectives from Europe and the Open Geospatial Consortium</td>
+  <td>5:00 - 6:30pm</td>
  </tr>
 </table>
 
