Added talks and slides to web site

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      </div>
        <div class="page-header">
        <h1>Workshop Schedule</h1>
-       <p>The <a href="schedule.html">workshop schedule</a> is now available</p>
+       <p>The <a href="2015/schedule.html">workshop schedule</a> is now available</p>
        <h1>Workshop description</h1>
        <div class="table">
         <div class="table-cell">
