create page for ieee 2016 workshop

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <div class="container">
      
      <div class="jumbotron">
-       <h1>Big Data in the Geosciences</h1>
-       <p>A workshop to be held Thursday October 29th at the <a href="http://cci.drexel.edu/bigdata/bigdata2015/">
-          2015 IEEE International Big Data Conference</a>
+       <h1>Big Data Challenges, Research, and Technologies in the Earth and Planetary Sciences</h1>
+       <p>A workshop to be held at the <a href="http://cci.drexel.edu/bigdata/bigdata2016/">
+          2016 IEEE International Big Data Conference</a>
        </p>
      </div>
        <div class="page-header">
@@ -33,41 +33,63 @@
        <div class="table">
         <div class="table-cell">
          <medium>
-         <p>Computing is fundamentally transforming science. We have entered the so- called Fourth Paradigm in which observational data is threatening to overwhelm scientists. There are now numerous examples of the five "V's" of Big Data (Volume, Velocity, Variety, Veracity, and Value) impacting the geosciences. The rapid improvements in scientific instruments have led to a massive growth in data production. As data volumes often prohibit transfer of such Big Data, it is becoming increasingly important to develop sustainable infrastructure, clever data management and reduction analytics, and community, around Geoscience Big Data. The increasing emphasis on sharing and collaborating has led to a growing focus on discovery and variety.</p>
-         <p class="text-left">In addition, scientific data, and the processes used to analyze that data, can differ substantially from those encountered with Big Data in other fields. Moreover, educating the next generation of geoscientists is itself becoming a pressing issue.</p>
-         <p class="text-left">This workshop focuses on highlighting the state-of-the-art research surrounding Big Data in the geosciences. The Workshop Chairs and Program Committee, with assistance from the <a href="http://www.opengeospatial.org">Open Geospatial Consortium</a>,  seek to engage the scientific community in understanding their big data challenges and problems. Finally, we aim to identify gaps in current technologies as well as gaps in the education of new data scientists. This workshop will provide a venue for participants to showcase innovative tools and services, build new collaborations, and hear from application scientists and educators about the challenges they face.</p>
+          <p>A new paradigm is needed in order to increase the productivity and effectiveness of scientific data analysis for Earth and planetary science investigation. This paradigm must recognize that architectural and analytical choices are interrelated, and must be carefully coordinated in any system that aims to allow efficient, interactive scientific exploration and discovery to exploit massive data collections, from point of collection to analysis and decision support.</p>
+
+          <p class="text-left">Both observational systems and data centers will be need to be part of this new paradigm, which includes the significant increase in size and complexity of science data as well as new approaches across the entire data lifecycle from capture to management and analysis of the data.</p>
+
+          <p class="text-left">This workshop builds off of two successful previous workshops in this area. <a href="geo-bigdata15.html">The Big Data in the Geosciences</a> and the Data and Computational Science Technologies for Each Science Research workshops have merged to offer a comprehensive venue for all aspects of Big Data in the Earth and Planetary Sciences. We seek computational and data science experts to present on their research and discuss Big Data roadmaps, architectures, technologies, and methodologies for future Earth and planetary science data challenges emerging from both instrumentation and data access and analytics.</p>
         </medium>
        </div>
        <div class="table-cell">
-       <a class="twitter-timeline"  href="https://twitter.com/hashtag/geobigdata15" data-widget-id="596732944749703168">#geobigdata15 Tweets</a>
-       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>   
+       <a class="twitter-timeline" href="https://twitter.com/hashtag/geobigdata16" data-widget-id="739817312795119616">#geobigdata16 Tweets</a>
+       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
         </div>   
      </div>
      <br/>
      <div>
       <h1>Topics of Interest</h1>
-      <ol>
-        <li>Big Data in Geosciences - needs, requirements, and use cases</li>
-        <li>Big Data infrastructure being developed and deployed at science facilities</li>        
-        <li>Semantic representation and integration including Linked Opend Data and 
-          efficient query and integration techniques</li>
-        <li>Frameworks and methodologies for handling big data in science applications</li>
-        <li>Data analytics utilized/needed for data reduction, cross-heterogeneous data analysis,
-          and science reserch</li>
-        <li>Use of Big Data technologies (e.g. Hadoop and NoSQL) for science</li>
-        <li>Visualization of scientific Big Data</li>
-        <li>Big Data and Data Science education in the geosciences</li>
-      </ol>
+
+      <h2>I. Architectural considerations and data life cycle</h2>
+      <ul>
+        <li>Integration of data, computing/HPC/cloud, and algorithms
+        <li>Cloud computing, software as a service</li>
+        <li>New technologies (e.g., distributed frameworks, database technologies, search, etc) for scaling the architecture</li>
+        <li>Semantic Technologies, Linked Data, and efficient semantic query, reasoning, and integration techniques</li>
+        <li>Capturing well-architected and curated data repositories</li>
+        <li>Data and semantic information architectures</li>
+        <li>Architecting automated pipelines for data capture</li>
+        <li>Enabling analytics on data pipelines for computation, data discovery, event detection, reduction, etc</li>
+        <li>Open source data science frameworks</li>
+      </ul>
+      <h2>II. Onboard/Sensor-based Computing</h2>
+      <ul>
+        <li>Embedded and real-time data reduction and triage/analytics methods</li>
+        <li>Managing bandwidth constraints for high volume instruments</li>
+        <li>Approaches for scaling observing systems for satellite, airborne and ground-based sensors</li>
+        <li>New concepts for data intensive missions</li>
+        <li>Integration of computational methods with observing systems</li>
+      </ul>
+      <h2>III. Scalable Data Analytics for Massively Distributed Data</h2>
+      <ul>
+        <li>Access and integration of highly distributed, heterogeneous data</li>
+        <li>Search and retrieval across massive, heterogeneous data stores</li>
+        <li>Novel statistical approaches for data integration and fusion</li>
+        <li>Sampling strategies from massive data repositories</li>
+        <li>Uncertainty in scientific inferences</li>
+        <li>In situ analysis for High Performance Computing</li>
+        <li>Computation applied at the data sources</li>
+        <li>Automated Machine Learning methods for identifying and extracting interesting features and patterns</li>
+        <li>Methods for visualizing massive observational and model data</li>
+        <li>Visualization of Big Data from observations and/or models</li> 
+      </ul>
      </div>
   
      <br/><h2>Paper Submission</h2>
-      Paper submissions can be up to 10 pages and must conform to the IEEE 2-column format<br/>
-      CyberChair submission is available
-      <a href="https://wi-lab.com/cyberchair/2015/bigdata15/scripts/ws_submit.php">
-		  here</a>
+      Paper sumbission details will be available soon
 
      <br/><h2>Important Dates</h2>
+     <!--
      <table class="table table-striped">
       <thead>
        <tr>
@@ -94,25 +116,23 @@
       </tr>
      </tbody>
      </table>
+      -->
 
      <br/><h2>Conference Organizers</h2>
      <table class="table table-striped">
      <tbody>
       <tr>
-        <td><a href="mailto:tnarock@marymount.edu">Tom Narock</a></td>
+        <td><a href="daniel.j.crichton@jpl.nasa.gov">Dan Crichton</a></td>
+        <td>Program Chair</td>
+        <td>NASA/JPL</td>
+      </tr>
+      <tr>
+        <td><a href="mailto:tom.narock@gmail.com">Tom Narock</a></td>
         <td>Program Chair</td>
         <td>Marymount University, USA</td>
       </tr>
-      <tr>
-        <td><a href="mailto:max7@rpi.edu">Marshall Ma</a></td>
-                <td>Program Chair</td>
-        <td>Rensselaer Polytechnic Institute, USA</td>
-      </tr>
-      <tr>
-        <td><a href="mailto:p.baumann@jacobs-university.de">Peter Baumann</a></td>
-                <td>Program Chair</td>
-        <td>Jacobs University, Germany</td>
-      </tr>
+      
+      <!--
       <tr>
         <td>Ann Bryant Burgess</td>
         <td>Program Committee</td>
@@ -163,6 +183,7 @@
         <td>Program Committee</td>
         <td><a href="http://www.jpl.nasa.gov">NASA Jet Propulsion Laboratory</a></td>
       </tr>
+    -->
      </tbody>
      </table>
 
