Added link to last years workshop

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
           <p class="text-left">Both observational systems and data centers will be needed as part of this new paradigm, which includes the significant increase in size and complexity of science data as well as new approaches across the entire data lifecycle from capture to management and analysis of the data.</p>
 
-          <p class="text-left">This workshop builds off of two successful previous workshops in this area. <a href="geo-bigdata15.html">The Big Data in the Geosciences</a> and the Data and Computational Science Technologies for Each Science Research workshops have merged to offer a comprehensive venue for all aspects of Big Data in the Earth and Planetary Sciences. We seek computational and data science experts to present on their research and discuss Big Data roadmaps, architectures, technologies, and methodologies for future Earth and planetary science data challenges emerging from both instrumentation and data access and analytics.</p>
+          <p class="text-left">This workshop builds off of two successful previous workshops in this area. <a href="geo-bigdata15.html">The Big Data in the Geosciences</a> and the <a href="http://ieee-bigdata-earthscience.jpl.nasa.gov/">Data and Computational Science Technologies for Each Science Research</a> workshops have merged to offer a comprehensive venue for all aspects of Big Data in the Earth and Planetary Sciences. We seek computational and data science experts to present on their research and discuss Big Data roadmaps, architectures, technologies, and methodologies for future Earth and planetary science data challenges emerging from both instrumentation and data access and analytics.</p>
         </medium>
        </div>
        <div class="table-cell">
