Updates to 2015 workshop text

--- a/geo-bigdata15.html
+++ b/geo-bigdata15.html
@@ -27,8 +27,8 @@
        </p>
      </div>
        <div class="page-header">
-       <h1>Workshop Schedule</h1>
-       <p>The <a href="2015/schedule.html">workshop schedule</a> is now available</p>
+       <h1>Workshop Papers and Presentations</h1>
+       <p>The <a href="2015/schedule.html">workshop schedule</a> with links to papers and presentations</p>
        <h1>Workshop description</h1>
        <div class="table">
         <div class="table-cell">
