Fixed Dans email link

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
      <table class="table table-striped">
      <tbody>
       <tr>
-        <td><a href="daniel.j.crichton@jpl.nasa.gov">Dan Crichton</a></td>
+        <td><a href="mailto:daniel.j.crichton@jpl.nasa.gov">Dan Crichton</a></td>
         <td>Program Chair</td>
         <td>NASA/JPL</td>
       </tr>
