added dates for submission 2016

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      
      <div class="jumbotron">
        <h1>Big Data Challenges, Research, and Technologies in the Earth and Planetary Sciences</h1>
-       <p>A workshop to be held at the <a href="http://cci.drexel.edu/bigdata/bigdata2016/">
+       <p>A workshop to be held Monday December 5th at the <a href="http://cci.drexel.edu/bigdata/bigdata2016/">
           2016 IEEE International Big Data Conference</a>
        </p>
      </div>
@@ -91,7 +91,6 @@
       Paper sumbission details will be available soon
 
      <br/><h2>Important Dates</h2>
-     <!--
      <table class="table table-striped">
       <thead>
        <tr>
@@ -101,24 +100,23 @@
      </thead>
      <tbody>
       <tr>
-        <td><strike>Aug 30, 2015</strike> &nbsp;Extended to Sept. 1 at midnight Eastern time</td>
-        <td>Due date for full workshop paper submissions</td>
+        <td>Monday, September 26th, 2016</td>
+        <td>Due date for paper submissions</td>
       </tr>
       <tr>
-        <td>Sept 20, 2015</td>
+        <td>Friday, October 28th, 2016</td>
         <td>Notification of paper acceptance to authors</td>
       </tr>
       <tr>
-        <td>Oct 5, 2015</td>
-        <td>Camera-ready version of accepted papers</td>
+        <td>Tuesday, November 15th, 2016</td>
+        <td>Camera-ready version of accepted papers due</td>
       </tr>
       <tr>
-        <td>Oct 29 - Nov 1, 2015</td>
-        <td>Workshops and Conference</td>
+        <td>Monday, December 5th, 2016</td>
+        <td>Workshop</td>
       </tr>
      </tbody>
      </table>
-      -->
 
      <br/><h2>Conference Organizers</h2>
      <table class="table table-striped">
