added links to IEEE formatting and paper submission

--- a/index.html
+++ b/index.html
@@ -88,7 +88,15 @@
      </div>
   
      <br/><h2>Paper Submission</h2>
-      Paper sumbission details will be available soon
+      Papers can be sumbitted <a href="https://wi-lab.com/cyberchair/2016/bigdata16/scripts/submit.php?subarea=S13&undisplay_detail=1&wh=/cyberchair/2016/bigdata16/scripts/ws_submit.php">here</a><br/><br/>
+
+      Papers should be formatted to 10 pages maximum using the IEEE Computer Society Proceedings Manuscript Formatting Guidelines below.<br/>
+
+      Formatting Instructions:<br>
+      8.5" x 11" (<a href="ftp://pubftp.computer.org/press/outgoing/proceedings/instruct8.5x11x2.doc">DOC</a>, <a href="ftp://pubftp.computer.org/press/outgoing/proceedings/instruct8.5x11x2.pdf">PDF</a>)
+      <br><a href="ftp://pubftp.computer.org/Press/Outgoing/proceedings/IEEE_CS_Latex8.5x11x2.zip">LaTex Formatting Macros
+      </a>
+      <br><br>
 
      <br/><h2>Important Dates</h2>
      <table class="table table-striped">
