Added program committee for 2016

--- a/index.html
+++ b/index.html
@@ -140,58 +140,27 @@
         <td>Marymount University</td>
       </tr>
       
-      <!--
       <tr>
-        <td>Ann Bryant Burgess</td>
+        <td>Nancy Chanover</td>
         <td>Program Committee</td>
-        <td>Foundation for Earth Science</td>
+        <td>New Mexico State University</td>
       </tr>
       <tr>
-        <td><a href="http://www.isi.edu/~gil">Yolanda Gil</a></td>
+        <td>S.G. Djorgovski</td>
         <td>Program Committee</td>
-        <td>Information Sciences Institute, University of Southern California</td>
+        <td>California Institute of Technology</td>
       </tr>
       <tr>
-        <td>Pascal Hitzler</td>
-        <td>Program Committee</td>
+        <td>Thomas Stein</td>
+        <td>Washington University in St. Louis</td>
         <td>Wright State Univerity</td>
       </tr>
       <tr>
-        <td>Steve Kempler</td>
+        <td>Ray Walker</td>
         <td>Program Committee</td>
-        <td>NASA Goddard Space Flight Center</td>
+        <td>UCLA</td>
       </tr>
-      <tr>
-        <td>Adila Krisnadhi</td>
-        <td>Program Committee</td>
-        <td>Wright State University</td>
-      </tr>
-      <tr>
-        <td><a href="http://sunset.usc.edu/~mattmann/">Chris Mattmann</a></td>
-        <td>Program Committee</td>
-        <td><a href="http://www.jpl.nasa.gov">NASA Jet Propulsion Laboratory</a> & <a href="http://cs.usc.edu">University of Southern California</a></td>
-      </tr>
-      <tr>
-        <td><a href="https://www.linkedin.com/in/lmcgibbney">Lewis John McGibbney</a></td>
-        <td>Program Committee</td>
-        <td><a href="http://www.jpl.nasa.gov">NASA Jet Propulsion Laboratory</a></td>
-      </tr>
-      <tr>
-        <td>Marlon Pierce</td>
-        <td>Program Committee</td>
-        <td>Indiana University</td>
-      </tr>
-      <tr>
-        <td>Marru Suresh</td>
-        <td>Program Committee</td>
-        <td>Indiana University</td>
-      </tr>
-      <tr>
-        <td>Kim Whitehall</td>
-        <td>Program Committee</td>
-        <td><a href="http://www.jpl.nasa.gov">NASA Jet Propulsion Laboratory</a></td>
-      </tr>
-    -->
+    
      </tbody>
      </table>
 
