fixed typo to program committee for 2016

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
       </tr>
       <tr>
         <td>Thomas Stein</td>
+        <td>Program Committee</td>
         <td>Washington University in St. Louis</td>
-        <td>Wright State Univerity</td>
       </tr>
       <tr>
         <td>Ray Walker</td>
