Updated program committee for 2016

--- a/index.html
+++ b/index.html
@@ -151,6 +151,31 @@
         <td>California Institute of Technology</td>
       </tr>
       <tr>
+        <td>Tsengdar Lee</td>
+        <td>Program Committee</td>
+        <td>NASA/HQ</td>
+      </tr>
+      <tr>
+        <td>Jacqueline Lemoigne-Stewart</td>
+        <td>Program Committee</td>
+        <td>NASA/GSFC</td>
+      </tr>
+      <tr>
+        <td>Mike Little</td>
+        <td>Program Committee</td>
+        <td>NASA/GSFC</td>
+      </tr>
+      <tr>
+        <td>Chris Lynnes</td>
+        <td>Program Committee</td>
+        <td>NASA/GSFC</td>
+      </tr>
+      <tr>
+        <td>Chris Mattmann</td>
+        <td>Program Committee</td>
+        <td>NASA/JPL</td>
+      </tr>
+      <tr>
         <td>Thomas Stein</td>
         <td>Program Committee</td>
         <td>Washington University in St. Louis</td>
