--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
        <h1>Workshop Schedule</h1>
        <p>The <a href="2015/schedule.html">workshop schedule</a> is now available</p>
      -->
+       <h1>Workshop Schedule</h1>
+       <p>The workshop will be held in room Congressional C. The workshop schedule is available <a href="IEEE_Workshop_Schedule.html">here</a>.
+       </p><br/>
+
        <h1>Workshop description</h1>
        <div class="table">
         <div class="table-cell">
@@ -139,7 +143,7 @@
       <tr>
         <td><a href="mailto:tom.narock@gmail.com">Tom Narock</a></td>
         <td>Program Chair</td>
-        <td>Marymount University</td>
+        <td>Notre Dame of Maryland University</td>
       </tr>
       
       <tr>
