Fixed typos in 2016 schedule

--- a/IEEE_Workshop_Schedule.html
+++ b/IEEE_Workshop_Schedule.html
@@ -846,7 +846,7 @@ table.MsoTableGrid
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
   style='font-size:9.0pt;line-height:115%;mso-fareast-font-family:"Times New Roman";
-  mso-bidi-font-family:"Times New Roman"'>8:00am Ð 8.05am<o:p></o:p></span></p>
+  mso-bidi-font-family:"Times New Roman"'>8:00am - 8.05am<o:p></o:p></span></p>
   </td>
   <td width="81%" colspan=2 style='width:81.54%;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -977,7 +977,7 @@ table.MsoTableGrid
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
   style='font-size:9.0pt;line-height:115%;mso-fareast-font-family:"Times New Roman";
-  mso-bidi-font-family:"Times New Roman"'>9:25am Ð 9.45am<o:p></o:p></span></p>
+  mso-bidi-font-family:"Times New Roman"'>9:25am - 9.45am<o:p></o:p></span></p>
   </td>
   <td width="56%" style='width:56.38%;border-top:none;border-left:none;
   border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -1005,7 +1005,7 @@ table.MsoTableGrid
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
   style='font-size:9.0pt;line-height:115%;mso-fareast-font-family:"Times New Roman";
-  mso-bidi-font-family:"Times New Roman"'>9:45am Ð 10.05am<o:p></o:p></span></p>
+  mso-bidi-font-family:"Times New Roman"'>9:45am - 10.05am<o:p></o:p></span></p>
   </td>
   <td width="56%" style='width:56.38%;border-top:none;border-left:none;
   border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -1104,8 +1104,8 @@ table.MsoTableGrid
   Donatello Elia, Michal <span class=SpellE>Owsiak</span>, Alessandro <span
   class=SpellE>D'Anca</span>, <span class=SpellE>Zeshawn</span> <span
   class=SpellE>Shaheen</span>, Riccardo Bruno, Marco <span class=SpellE>Fargetta</span>,
-  Miguel <span class=SpellE>Caballer</span>, <span class=SpellE>Germ‡n</span> <span
-  class=SpellE>Molt—</span>, Ignacio <span class=SpellE>Blanquer</span>,
+  Miguel <span class=SpellE>Caballer</span>, <span class=SpellE>German</span> <span
+  class=SpellE>Molto</span>, Ignacio <span class=SpellE>Blanquer</span>,
   Roberto <span class=SpellE>Barbera</span>, Dean Williams, Valentine <span
   class=SpellE>Anantharaj</span>, and Giovanni <span class=SpellE>Aloisio</span><o:p></o:p></span></p>
   </td>
@@ -1144,7 +1144,7 @@ table.MsoTableGrid
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
   style='font-size:9.0pt;line-height:115%;mso-fareast-font-family:"Times New Roman";
-  mso-bidi-font-family:"Times New Roman"'>11:20am Ð 11:30am<o:p></o:p></span></p>
+  mso-bidi-font-family:"Times New Roman"'>11:20am - 11:30am<o:p></o:p></span></p>
   </td>
   <td width="81%" colspan=2 style='width:81.54%;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -1191,8 +1191,8 @@ table.MsoTableGrid
   <p class=MsoNormal align=center style='text-align:center;mso-pagination:none;
   mso-layout-grid-align:none;text-autospace:none'><b style='mso-bidi-font-weight:
   normal'><span style='font-size:9.0pt;line-height:115%;mso-fareast-font-family:
-  "Times New Roman";mso-bidi-font-family:"Times New Roman"'>Community Reports Ð
-  Ben Evans Ð National Computational Infrastructure, Australia<o:p></o:p></span></b></p>
+  "Times New Roman";mso-bidi-font-family:"Times New Roman"'>Community Reports -
+  Ben Evans - National Computational Infrastructure, Australia<o:p></o:p></span></b></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:16;mso-yfti-lastrow:yes'>
@@ -1210,7 +1210,7 @@ table.MsoTableGrid
   <p class=MsoNormal align=center style='text-align:center;mso-pagination:none;
   mso-layout-grid-align:none;text-autospace:none'><b style='mso-bidi-font-weight:
   normal'><span style='font-size:9.0pt;line-height:115%;mso-fareast-font-family:
-  "Times New Roman";mso-bidi-font-family:"Times New Roman"'>Community Reports Ð
+  "Times New Roman";mso-bidi-font-family:"Times New Roman"'>Community Reports -
   Mike Little - NASA<o:p></o:p></span></b></p>
   </td>
  </tr>
