Fixed another typo in 2016 schedule

--- a/IEEE_Workshop_Schedule.html
+++ b/IEEE_Workshop_Schedule.html
@@ -1173,7 +1173,7 @@ table.MsoTableGrid
   mso-layout-grid-align:none;text-autospace:none'><b style='mso-bidi-font-weight:
   normal'><span style='font-size:9.0pt;line-height:115%;mso-fareast-font-family:
   "Times New Roman";mso-bidi-font-family:"Times New Roman"'>Community Reports -
-  George Percival Ð Open Geospatial Consortium<o:p></o:p></span></b></p>
+  George Percival - Open Geospatial Consortium<o:p></o:p></span></b></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:15'>
