Fixed more errors in schedule html layout

--- a/IEEE_Workshop_Schedule.html
+++ b/IEEE_Workshop_Schedule.html
@@ -83,7 +83,7 @@ div.WordSection1
   <td width="18%" style='width:18.46%;border:solid windowtext 1.0pt;border-top:
   none;padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:9.0pt;line-height:115%'>8:00am Ð 8.05am</span></p>
+  style='font-size:9.0pt;line-height:115%'>8:00am - 8.05am</span></p>
   </td>
   <td width="81%" colspan=2 style='width:81.54%;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -181,7 +181,7 @@ div.WordSection1
   <td width="18%" style='width:18.46%;border:solid windowtext 1.0pt;border-top:
   none;padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:9.0pt;line-height:115%'>9:25am Ð 9.45am</span></p>
+  style='font-size:9.0pt;line-height:115%'>9:25am - 9.45am</span></p>
   </td>
   <td width="56%" style='width:56.38%;border-top:none;border-left:none;
   border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -202,7 +202,7 @@ div.WordSection1
   <td width="18%" style='width:18.46%;border:solid windowtext 1.0pt;border-top:
   none;padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:9.0pt;line-height:115%'>9:45am Ð 10.05am</span></p>
+  style='font-size:9.0pt;line-height:115%'>9:45am - 10.05am</span></p>
   </td>
   <td width="56%" style='width:56.38%;border-top:none;border-left:none;
   border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -271,8 +271,8 @@ div.WordSection1
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=p1><span class=s1><span style='font-family:"Times New Roman"'>S.
   Fiore, M. P&#x0142;&oacute;ciennik, C. Doutriaux, C. Palazzo, J. Boutte, T. &#x017B;ok, D. Elia,
-  M. Owsiak, A. DÕAnca, Z. Shaheen, R. Bruno, M. Fargetta, M. Caballer,
-  G.&nbsp;Molt—, I. Blanquer, R. Barbera, M. David, G. Donvito, D. N. Williams,
+  M. Owsiak, A. D'Anca, Z. Shaheen, R. Bruno, M. Fargetta, M. Caballer,
+  G.&nbsp;Molt&oacute;, I. Blanquer, R. Barbera, M. David, G. Donvito, D. N. Williams,
   V. Anantharaj, D. Salomoni, and G. Aloisio</span></span></p>
   </td>
  </tr>
@@ -301,7 +301,7 @@ div.WordSection1
   <td width="18%" style='width:18.46%;border:solid windowtext 1.0pt;border-top:
   none;padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:9.0pt;line-height:115%'>11:20am Ð 11:30am</span></p>
+  style='font-size:9.0pt;line-height:115%'>11:20am - 11:30am</span></p>
   </td>
   <td width="81%" colspan=2 style='width:81.54%;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -321,7 +321,7 @@ div.WordSection1
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center;text-autospace:none'><b><span
   style='font-size:9.0pt;line-height:115%'>Community Reports - George Percival
-  Ð Open Geospatial Consortium</span></b></p>
+  - Open Geospatial Consortium</span></b></p>
   </td>
  </tr>
  <tr>
@@ -334,7 +334,7 @@ div.WordSection1
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center;text-autospace:none'><b><span
-  style='font-size:9.0pt;line-height:115%'>Community Reports Ð Ben Evans Ð
+  style='font-size:9.0pt;line-height:115%'>Community Reports - Ben Evans - 
   National Computational Infrastructure, Australia</span></b></p>
   </td>
  </tr>
@@ -348,7 +348,7 @@ div.WordSection1
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center;text-autospace:none'><b><span
-  style='font-size:9.0pt;line-height:115%'>Community Reports Ð Mike Little -
+  style='font-size:9.0pt;line-height:115%'>Community Reports - Mike Little -
   NASA</span></b></p>
   </td>
  </tr>
