Updated author name in 2016 schedule

--- a/IEEE_Workshop_Schedule.html
+++ b/IEEE_Workshop_Schedule.html
@@ -194,7 +194,7 @@ div.WordSection1
   border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:9.0pt'>Zhou, S.,
+  text-align:center;line-height:normal'><span style='font-size:9.0pt'>S. Zhou, 
   X. Li, T. Matsui, and W.-K. Tao</span></p>
   </td>
  </tr>
