--- a/IEEE_Workshop_Schedule.html
+++ b/IEEE_Workshop_Schedule.html
@@ -301,20 +301,26 @@ div.WordSection1
   <td width="18%" style='width:18.46%;border:solid windowtext 1.0pt;border-top:
   none;padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:9.0pt;line-height:115%'>11:20am - 11:30am</span></p>
+  style='font-size:9.0pt;line-height:115%'>11:20am - 11:40am</span></p>
   </td>
-  <td width="81%" colspan=2 style='width:81.54%;border-top:none;border-left:
+  <td width="81%" style='width:81.54%;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
   padding:0in 5.4pt 0in 5.4pt'>
-  <p class=MsoNormal align=center style='text-align:center;text-autospace:none'><b><span
-  style='font-size:9.0pt;line-height:115%'>Open Discussion on Papers</span></b></p>
+  <p class=MsoNormal align=center style='text-align:center;text-autospace:none'><span
+  style='font-size:9.0pt;line-height:115%'>Dynamic Topic Modeling to Infer the Influence of Research Citations on IPCC Assessment Reports</span></p>
+  </td>
+  <td width="81%" style='width:81.54%;border-top:none;border-left:
+  none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  padding:0in 5.4pt 0in 5.4pt'>
+  <p class=MsoNormal align=center style='text-align:center;text-autospace:none'><span
+  style='font-size:9.0pt;line-height:115%'>Jennifer Sleeman, Milton Halem, Tim Finin, and Mark Cane</span></p>
   </td>
  </tr>
  <tr>
   <td width="18%" style='width:18.46%;border:solid windowtext 1.0pt;border-top:
   none;padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:9.0pt;line-height:115%'>11:30am - 11:50am</span></p>
+  style='font-size:9.0pt;line-height:115%'>11:40am - 12:00pm</span></p>
   </td>
   <td width="81%" colspan=2 style='width:81.54%;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -328,7 +334,7 @@ div.WordSection1
   <td width="18%" style='width:18.46%;border:solid windowtext 1.0pt;border-top:
   none;padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:9.0pt;line-height:115%'>11:50am - 12:10pm</span></p>
+  style='font-size:9.0pt;line-height:115%'>12:00pm - 12:20pm</span></p>
   </td>
   <td width="81%" colspan=2 style='width:81.54%;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -342,14 +348,13 @@ div.WordSection1
   <td width="18%" style='width:18.46%;border:solid windowtext 1.0pt;border-top:
   none;padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
-  style='font-size:9.0pt;line-height:115%'>12:10pm - 12:30pm</span></p>
+  style='font-size:9.0pt;line-height:115%'>12:20pm - 12:30pm</span></p>
   </td>
   <td width="81%" colspan=2 style='width:81.54%;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='text-align:center;text-autospace:none'><b><span
-  style='font-size:9.0pt;line-height:115%'>Community Reports - Mike Little -
-  NASA</span></b></p>
+  style='font-size:9.0pt;line-height:115%'>Open Discussion, Closing Remarks</span></b></p>
   </td>
  </tr>
 </table>
